fixed extra padding for ul

--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -43,7 +43,7 @@
     <blockquote>
       Michele had a left breast biopsy. Let’s evaluate the tissue.
   </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+    <main id="content-main" class="row patient-2 top-gray svg-test">
 
       <div class="header-gray">
         <div class="col-md-3">
