fixed patient2 sidebar not showing purple highlighted her2 test

--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -13,9 +13,9 @@
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
-          <ul>
+          <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> Er Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> Er Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -42,7 +42,7 @@
     <blockquote>
 The pathologist examined Michele’s tissue and has provided a pathology report.
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
 
       <div class="header-gray">
         <div class="col-md-3">
