--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -14,13 +14,13 @@
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
-          <ul>
+          <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> Er Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> Er Test</li>
           </ul>
-          <ul>
+          <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_on.png" alt="" /></span> HER2 Test</li>
           </ul>
           <ul>
             <li><span></span></li>
