--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -14,9 +14,9 @@
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
-          <ul>
+          <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> Er Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> Er Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -42,7 +42,7 @@
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
 Michele’s tissue sample has been sent for ER testing.  </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+    <main id="content-main" class="row patient-2 top-gray svg-test">
 
       <div class="header-gray">
         <div class="col-md-3">
