fixed startview cards so the whole card is clickable

--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -9,8 +9,9 @@
     </blockquote>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
+  <a class="start-patient" href="/patient1view1" data-navigate="patient1view1"></a>
     <div class="col-md-5 no-pad">
-      <a class="" href="/patient1view1" data-navigate="patient1view1">
+
         <img class="patient1" src="images/patient3-final.jpg">
       </a>
     </div>
@@ -27,7 +28,7 @@
 <a class="text-blue" href="/patient1view1" data-navigate="patient1view1">Click here to continue.</a>
           </p>
         </div>
-        </a>
+</a>
     </div>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
