--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -50,8 +50,9 @@
     </div>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
+  <a class="start-patient" href="/patient3view1" data-navigate="patient3view1"></a>
+
   <div class="col-md-5 no-pad">
-    <a class="" href="/patient3view1" data-navigate="patient3view1">
 
     <img class="patient3" src="images/patient2-final.jpg">
   </a>
