--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -29,14 +29,15 @@
     </div>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
+  <a class="start-patient"  href="/patient2view1" data-navigate="patient2view1"></a>
+
     <div class="col-md-5 no-pad">
-      <a class="" href="/patient2view1" data-navigate="patient2view1">
 
       <img class="patient2" src="images/patient1-final.jpg">
-    </a>
+
     </div>
     <div class="col-md-7 no-pad">
-      <a class="no-link-color" href="/patient2view1" data-navigate="patient2view1">
+      <a class="no-link-color" href="/patient2view1" data-navigate="patient2view1"></a>
         <div class="patient-title background-purple">
             <h4>patient n<span style="text-transform:lowercase;">o</span>. 02</h4>
             <h3>Michele Johnson</h3>
