--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -308,7 +308,13 @@ top: 13px;
     font-size: 15px;
   }
 }
-
+.start-patient {
+  position:absolute;
+  top:0;right:0;bottom:0;left:0;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+}
 .size-1,.size-2,.size-3,.size-4 {
   cursor: pointer;
 }
