fixed startview overlay for patient 3 on startview2

--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -58,7 +58,7 @@
     <img class="patient3" src="images/patient2-final.jpg">
     <img class="up-next" src="images/up-next.png" alt="" />
   </div>
-  <div class="col-md-7 no-pad locked">
+  <div class="col-md-7 no-pad">
     <img class="lock" src="images/locked.png" alt="" />
   <div class="patient-title background-green">
     <h4>patient n<span style="text-transform:lowercase;">o</span>. 03</h4>
