fixed 'Click on the object below that is closest in size.' to correct copy patient1view5

--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -46,7 +46,7 @@
 
       </p>
       <div class="svg-container">
-        <div class="svg-text2">Which object is closest in size?</div>
+        <div class="svg-text2">Click on the object below that is closest in size.</div>
         <figure>
           <img src="images/p1screen3.png" alt="" />
         </figure>
