fixed magnify showing on patient2view10 and patient3view10

--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -59,7 +59,7 @@
 </p>
 
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/Microscope_GreenRedDots_6_5.jpg" src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
+  <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
 </figure>
 
 
