fixed routing to include last 4 pages of patient1, added both typeform quizzes

--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -26,10 +26,9 @@
                                 <li class="third-step completed"><span class="dot completed"></span></li>
                                 <li class="fourth-step completed"><span class="dot completed"></span></li>
                                 <li class="fifth-step completed"><span class="dot completed"></span></li>
-                                <li class="6th-step completed"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
-                                <li class="7th-step "><span class="dot"></span></li>
-
-                                <li class="8th-step "><span class="dot "></span></li>
+                                <li class="6th-step completed"><span class="dot completed"></span></li>
+                                <li class="7th-step completed"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                                <li class="8th-step"><span class="dot"></span></li>
 
                               </ul>
                             </div>
@@ -51,35 +50,32 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-md-offset-1 top-quote">
-
+                  <blockquote>
+                      Let's review
+                  </blockquote>
                     <main id="content-main" class="row patient-1 svg-test">
-                      <blockquote>
-                          Velma had a right breast lumpectomy. Let's evaluate the tissue.
-                      </blockquote>
-                        <ul class="specs">
-                            <li>
-                                <strong>Specimen Type:</strong> Right breast lumpectomy, lymph nodes</li>
-                            <li>
-                                <strong>Specimen Size:</strong> Greatest dimension, 5cm</li>
-                            <li>
-                                <strong>Laterality:</strong> Right</li>
-                            <li>
-                                <strong>Tumor Size:</strong> 3.5cm</li>
-                        </ul>
-                        <iframe id="my_typeform" src="https://karson3.typeform.com/to/AypoqR">
+
+                        <p>
+                          Take this quiz to refresh what you have learned and that will help you with this lesson.
+
+                        </p>
+                        <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/qYJgkV">
 
                         </iframe>
 
                         <div class="row continue-container background-nav-blue">
                             <div class="col-md-12 no-pad text-center">
                               <div class="col-md-4">
-                                <a class="previous" href="/patient1view10" data-navigate="patient1view10"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                                <a class="previous" href="/patient1view13" data-navigate="patient1view13"><button class="" type="button" name="button">&#8592; Previous</button></a>
                               </div>
-                              <div class="col-md-4 col-md-offset-4">
+                              <div class="col-md-4 line-across">
+
+                              </div>
+                              <div class="col-md-4">
 
 
                                 <!-- Button trigger modal -->
-                                <a class="continue"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                                <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -89,7 +85,7 @@
                                       <h2><span class="pink-hl">Slide 1 </span>contains abnormal cells from your patient's biopsy. Slide 2 contains normal cells.</h2>
                                       </div>
                                       <div class="modal-footer background-nav-blue">
-                                        <a href="/patient1view12" data-navigate="patient1view12" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                                        <a href="/patient1view14" data-navigate="patient1view14" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
 
                                       </div>
                                     </div>
