--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -65,7 +65,7 @@
    A score is calculated.
 
   </p>
-                      <a class="y-n continue next left-arrow" href="startview2" data-navigate="startview2"><span class="top-1">&#8594;</span></a>
+                      <a class="y-n continue next left-arrow" href="patient1view34" data-navigate="patient1view34"><span class="top-1">&#8594;</span></a>
 
                 </div>
 
