--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -108,7 +108,7 @@ Patient age: 44 years old</td></p>
                                       <h2><span class="pink-hl">Slide 1 </span>contains abnormal cells from your patient's biopsy. Slide 2 contains normal cells.</h2>
                                       </div>
                                       <div class="modal-footer background-nav-blue">
-                                        <a href="/patient1view14" data-navigate="patient1view14" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                                        <a href="/patient1view13_5" data-navigate="patient1view13_5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
                                       </div>
                                     </div>
