fixed browser modal copy

--- a/src/javascript/templates/screen1IntroView.hbs
+++ b/src/javascript/templates/screen1IntroView.hbs
@@ -23,3 +23,18 @@
           <a data-navigate="screen2" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
         </div>
     </div>
+
+
+    <div class="modal fade" id="modalBrowser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div style="text-align:center;" class="modal-body">
+            <img src="images/alert2.png" alt="" />
+            <h2 style="text-align:center;">The experience is best viewed in the latest available version of your browser.</h2>
+          </div>
+          <div class="modal-footer background-nav-blue">
+            <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
