--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -25,7 +25,7 @@
         <div class="row patient-copy">
             <p>
                 Velma is a 44&mdash;year old female. During her monthly breast self-exam, Velma felt a lump in her right breast. Velma's physician has ordered a mammogram to see if there is abnormal breast tissue.
-<a class="text-blue" href="/patient1view1" data-navigate="patient1view1">Click here to continue.</a>
+<a class="text-blue" href="/patient1view1" data-navigate="patient1view1">Click here to learn more about Velma.</a>
           </p>
         </div>
 </a>
