--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -47,7 +47,7 @@
         <div class="row patient-copy">
             <p>
                 Michele is a 47&mdash;year old female. Her physician spotted abnormal tissue during a routine mammogram. Michele has never had breast cancer before.
-                <a class="text-blue" href="/patient2view1" data-navigate="patient2view1">Click here to continue.</a>
+                <a class="text-blue" href="/patient2view1" data-navigate="patient2view1">Click here to learn more about Michele.</a>
             </p>
         </div>
       </a>
