fixed missing pages and closed several more issues

--- a/src/javascript/templates/patient1/patient1View16-5.hbs
+++ b/src/javascript/templates/patient1/patient1View16-5.hbs
@@ -51,30 +51,21 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Molecular tests evaluate DNA, genes, or proteins in tumor tissue. Genes encode proteins and proteins dictate cell function.      </blockquote>
+The <span class="pink-hl">Estrogen Receptor (ER) Test</span> determines if the cells from the breast tissue have protein receptors for estrogen.   </blockquote>
     <main id="content-main" class="row patient-1">
 
-      <p>This lab is equipped to perform three different tests.</p>
+      <p>Estrogen can lead breast cancer cells to multiply uncontrollably.<br><br>
+The ER Test detects whether or not a specific cancer’s cells express estrogen receptor protein.  If ER is expressed, this means the cancer may respond to hormone-targeted therapy.  This test will result be reported either as positive or negative.<br><br>
+If the ER result is positive, the physician should recommend hormone blocking therapy.
+</p>
 
-  <ul class="specs">
-      <li>
-          <strong>&mdash;</strong> Estrogen Receptor (ER)
-  </li>
-      <li>
-          <strong>&mdash;</strong> HER2 Fluorescence In-situ Hybridization (HER2 FISH)</li>
-      <li>
-          <strong>&mdash;</strong> OncoType DX®
-        </li>
-  </ul>
+
          <figure>
-           <img src="images/double_helix.jpg" alt="" />
+           <img class="magnify one-hun" class="zoom" data-magnify-src="images/ER_Invasive2_Velma.jpg" src="images/ER_Invasive2_Velma.jpg" alt="cell biopsy slide 3" />
+
+
          </figure>
-          <p>
-          Cancerous cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei.  They have no duct structures and stain more purple than pink.
-          </p>
-          <figure>
-            <img src="images/doctor_in_lab.jpg" alt="" />
-          </figure>
+
 
           <div class="row continue-container background-nav-blue">
               <div class="col-md-12 no-pad text-center">
@@ -85,7 +76,7 @@
 
                 </div>
                 <div class="col-md-4">
-                  <a data-navigate="patient1view16_5" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                  <a data-navigate="patient1view17" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                 </div>
               </div>
           </div>
