--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -77,7 +77,7 @@
                 <p>
                   <strong>Step 3</strong>
                 </p>
-                  <a class="y-n continue next left-arrow" href="/patient1view20" data-navigate="patient1view20"><span class="top-1">&#8594;</span></a>
+                  <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-target="#myModal" class="top-1">&#8594;</span></a>
 
             </div>
         </div>
@@ -93,7 +93,7 @@
 
 
                 <!-- Button trigger modal -->
-                <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                <a class="continue next"><button class="muted" type="button"  name="button">Next &#8594;</button></a>
 
                 <!-- Modal -->
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -109,7 +109,7 @@ Be sure to record the results in your Lab Handbook.</p>
 
                       </div>
                       <div class="modal-footer background-nav-blue">
-                        <a  class="continue next"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                        <a  class="continue-2" href="/patient1view20" data-navigate="patient1view20"><button id="next-page" type="button" class="next-page" data-dismiss="modal" name="button">Continue</button></a>
 
                       </div>
                     </div>
