--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -40,24 +40,15 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-Use the notes from your Lab Handbook to recommend a personalized treatment plan for Michele Johnson.
+    Dr. You: Make a Decision
     </blockquote>
     <main id="content-main" class="row patient-3">
 
-      <p>Select one of the following options and review your patient’s progress:
+    What are the implications of Brittany’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.<br><br>
 
+Do you have enough information to make a recommendation for treatment or do you need additional information?  <br><br>
 
-</p>
-<strong>TO-DO MULTIPLE CHOICE</strong>
-<p>
-Hormone blocking therapy only<br>
- Chemotherapy followed by hormone blocking therapy<br>
- HER2-targeted therapy and chemotherapy<br>
- Hormone blocking therapy, HER2-targeted therapy, and chemotherapy<br>
-</p>
-<p>
-Student makes selection.  Feedback given.
-</p>
+Click below to make your selection for next steps.
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
 
@@ -70,7 +61,7 @@ Student makes selection.  Feedback given.
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a data-navigate="patient3view13" class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -82,7 +73,7 @@ Student makes selection.  Feedback given.
                        <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view13"><button  name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient3view15"><button class="muted" name="button">Next &#8594;</button></a>
                        </div>
                      </div>
                    </div>
@@ -94,7 +85,7 @@ Student makes selection.  Feedback given.
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view13" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
+                 <a data-navigate="patient3view15" class="continue next next-test"><button type="button" class="next-test" name="button">Next Test &#8594;</button></a>
                </div>
              </div>
          </div>
