fixed chart on patient1view21

--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -55,100 +55,13 @@
       </blockquote>
       <main id="content-main" class="row patient-1">
 
-          <div class="table">
-              <div class="col-md-4 table-col">
-                  <h2>HER2 FISH Result</h2>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Amplified
-                          </p>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Not amplified
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4 table-col">
-                  <h2>HER2/CEP17 ratio</h2>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Equal to or Greater than 2
-                          </p>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Less than 2
 
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4 table-col">
-                  <h2>Amount of HER2 protein
-                  </h2>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Excess amount
-                          </p>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Normal amount
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-6 table-col">
-                  <h2>Impact on cancer growth
-                  </h2>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Increases growth
-                          </p>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              No effect
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-6 table-col">
-                  <h2>Implication for treatment
-                  </h2>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Use HER2-targeted therapy to slow down growth and kill cancer cells
-                          </p>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-12">
-                          <p>
-                              Do not use HER2 targeted therapy.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </p>
-          <p>For example, if the pathologist counts a total of 42 HER2 dots and 7 CEP17 dots, the HER2/CEP17 ratio is 6. This means that the HER2 Test result will be reported as amplified.
-        If the HER2 FISH results come back as amplified, the physician should recommend HER2-targeted therapy.
+
+      <figure>
+        <img src="images/chart2.jpg" alt="" />
+      </figure><br><br>
+          <p>For example, if the pathologist counts a total of 42 HER2 dots and 7 CEP17 dots, the HER2/CEP17 ratio is 6. This means that the HER2 Test result will be reported as amplified.<br><br>
+        If the HER2 FISH results come back as amplified, the physician should recommend HER2-targeted therapy.<br><br>
 
         It is important to note that, because HER2-targeted therapy is only given along with chemotherapy, chemotherapy would also be a part of the treatment plan.</p>
 
