--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -43,12 +43,13 @@
     Dr. You: Make a Decision
     </blockquote>
     <main id="content-main" class="row patient-3">
+<p>
 
     What are the implications of Brittany’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.<br><br>
 
 Do you have enough information to make a recommendation for treatment or do you need additional information?  <br><br>
 
-Click below to make your selection for next steps.
+Click below to make your selection for next steps. </p>
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
 
