--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -45,8 +45,8 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Velma’s doctors have sent her tissue sample for ER testing.
-    </blockquote>
+      <!-- Velma’s doctors have sent her tissue sample for ER testing.
+    </blockquote> -->
     <main id="content-main" class="row patient-3 svg-test">
 
 
@@ -78,7 +78,7 @@
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                      <div class="modal-body">
+                      <div style="text-align:left;" class="modal-body">
                       <h2>Brittany’s OncoType DX® Test results are in!</h2>
                       <p><span class="pink-hl">Brittany Featherston’s OncoType DX® Test Results: 35</span><br><br>
 Be sure to record the results in your Lab Handbook.
