fixed patient1view13 chart image

--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -54,36 +54,14 @@
 Generally, the smaller the tumor, the better the patient’s chances for positive outcomes and the lower the chances of recurrence of breast cancer.<br><br>
 
 
-<h2 class="table-hdr">Surgical Pathology Report - Preliminary</h2>
-<div class="col-md-6 table-pad">
-<p>Patient: Velma Belt<br>
-Medical Record Number: 01234<br>
-Patient age: 44 years old</td></p>
-</div>
-<div class="col-md-6 table-pad">
-<p>Date of Procedure: July 1, 2016<br>
-  Procedure: Right Breast<br>
-  Lumpectomy, lymph node biopsy</p>
-</div>
-  <div class="col-md-12">
-  <ul class="specs">
-      <li>
-        <strong>Specimen Size:</strong> Greatest dimension, 5cm</li>
-      <li>
-        <strong>Laterality:</strong> Right</li>
-      <li><strong>Tumor size:</strong> 3.5cm</li>
-      <li><strong>Tumor Grade:</strong> XYZ</li>
-      <li><strong>Margins:</strong> no tumor at margin</li>
-      <li><strong>Number of lymph nodes evaluated:</strong> 1</li>
-      <li>
-              <strong>Number of lymph nodes with cancer:</strong> 0</li>
 
-  </ul>
-</div>
-<p>
+</p>
+  <figure>
+    <img src="images/chart3.jpg" alt="" />
+  </figure><br><br>
 <strong>Be sure to record this information in your Lab Handbook.
 </strong>
-    </p>
+
 
 
                         <div class="row continue-container background-nav-blue">
