fixed patient2 and 3 sidenav copy and patient 2 and 3 content padding

--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -16,7 +16,7 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> Er Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -24,15 +24,15 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span>HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span> OncoType DX Test</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span>HER2 Test</li>
+            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
