--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -5,7 +5,7 @@
       <nav class="side-nav background-purple">
         <img class="patient2" src="images/patient1-final.jpg">
         <ul class="background-purple margin-bottom-0">
-          <li><span class="white">Patient No.02</span></li>
+          <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
@@ -15,7 +15,7 @@
           </ul>
           <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> Er Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -23,15 +23,15 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span>HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span> OncoType DX Test</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span>HER2 Test</li>
+            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
