--- a/src/javascript/templates/patient3/patient3view1.hbs
+++ b/src/javascript/templates/patient3/patient3view1.hbs
@@ -11,15 +11,11 @@
         <div class="row next-steps p-2-steps">
           <ul class="">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/p3icon_biopsy_off.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom"><span><img src="images/p3icon_biopsy_off.png" alt="" /></span> Biopsy</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> Er Test</li>
-          </ul>
-          <ul>
-            <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -27,11 +23,15 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span>HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span>HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span> OncoType DX Test</li>
+          </ul>
+          <ul>
+            <li><span></span></li>
+            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
