added multiple choice quizes patient2view12 patient3view15

--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -11,7 +11,7 @@
         <div class="row next-steps p-2-steps">
           <ul class="">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom"><span><img src="images/icon_biopsy_over.png" alt="" /></span>Biopsy</li>
           </ul>
           <ul>
             <li><span></span></li>
