--- a/src/javascript/templates/patient2/patient2view11.hbs
+++ b/src/javascript/templates/patient2/patient2view11.hbs
@@ -4,22 +4,22 @@
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
         <img class="patient2" src="images/patient1-final.jpg">
-        <ul>
+        <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-purple">
+        <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom purple-text"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
+          </ul>
+          <ul class="background-gray2">
+            <li><span></span></li>
+            <li class="border-bottom purple-text"><img src="images/icon_ertest_off.png" alt="" /></span> ER Test</li>
           </ul>
           <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
-          </ul>
-          <ul class="background-purple">
-            <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_on.png" alt="" /></span> HER2 Test</li>
           </ul>
           <ul>
             <li><span></span></li>
