--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -4,22 +4,22 @@
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
         <img class="patient2" src="images/patient1-final.jpg">
-        <ul>
+        <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-purple">
+        <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom purple-text"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
+          </ul>
+          <ul class="background-gray2">
+            <li><span></span></li>
+            <li class="border-bottom purple-text"><img src="images/icon_ertest_off.png" alt="" /></span> Er Test</li>
           </ul>
           <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> Er Test</li>
-          </ul>
-          <ul class="background-purple">
-            <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_on.png" alt="" /></span> HER2 Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -42,62 +42,92 @@
     <blockquote>
 Use the notes from your Lab Handbook to recommend a personalized treatment plan for Michele Johnson.
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
+      <p class="background-gray3">Select one of the following options and review your patient’s progress:</p>
 
-      <p>Select one of the following options and review your patient’s progress:
+    <h2>A: Hormone blocking therapy only</h2>
+<div class="row reg-pad">
+    <div class="col-md-12 no-pad text-center choice background-nav-blue">
+        <a class="continue answer-1"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer1" >Administor Treatment A</button></a>
 
-
-</p>
-<p class="no-other-pad"><strong>TO-DO MULTIPLE CHOICE</strong></p>
-<p>
-Hormone blocking therapy only<br>
- Chemotherapy followed by hormone blocking therapy<br>
- HER2-targeted therapy and chemotherapy<br>
- Hormone blocking therapy, HER2-targeted therapy, and chemotherapy<br>
-</p>
-<p>
-Student makes selection.  Feedback given.
-</p>
-         <!-- <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
+      </div>
+</div>
 
 
+<!-- Modal -->
+<div class="modal fade" id="modalAnswer1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body pat2">
+      <h2>Incorrect:  You did not select the most appropriate adjuvant treatment option based on Michele’s test results.  Please review your Lab Handbook and select another treatment option.
+</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
+      </div>
+    </div>
+  </div>
+</div>
 
-         </figure> -->
-         <div class="row continue-container background-nav-blue">
-             <div class="col-md-12 no-pad text-center">
-               <div class="col-md-6">
+  <h2>B: Hormone blocking therapy and chemotherapy</h2>
+<div class="row reg-pad">
+    <div class="col-md-12 no-pad text-center choice background-nav-blue">
+        <a class="continue answer-2"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer2" >Administor Treatment B</button></a>
 
+      </div>
+  </div>
 
-                 <!-- Button trigger modal -->
-                 <a class="previous"><button class="select" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+  <div class="modal fade" id="modalAnswer2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body pat2">
+      <h2>Incorrect:  You did not select the most appropriate adjuvant treatment option based on Michele’s test results.  Please review your Lab Handbook and select another treatment option.</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
+      </div>
+    </div>
+  </div>
+</div>
+  <h2>C: HHER2-targeted therapy and chemotherapy</h2>
+<div class="row reg-pad">
+    <div class="col-md-12 no-pad text-center choice background-nav-blue">
+        <a class="continue answer-3"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer3" >Administor Treatment C</button></a>
 
+      </div>
+  </div>
 
+  <div class="modal fade" id="modalAnswer3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body pat2">
+      <h2>Correct: Based on Michele’s test results, the recommended treatment is HER2-targeted therapy and chemotherapy.  As a result of HER2-targeted therapy and chemotherapy, Michele has not had a recurrence of her breast cancer.  Success!</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a data-navigate="startview3" class="continue-2"><button data-dismiss="modal" name="button">Continue</button></a>
+      </div>
+    </div>
+  </div>
+</div>
+  <h2>D: Hormone blocking therapy, HER2-targeted therapy, and chemotherapy</h2>
+<div class="row reg-pad m-bot">
+    <div class="col-md-12 no-pad text-center choice background-nav-blue">
+        <a class="continue answer-4"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer4" >Administor Treatment D</button></a>
 
-                 <!-- Modal -->
-                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                   <div class="modal-dialog" role="document">
-                     <div class="modal-content">
-                       <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
-                       </div>
-                       <div class="modal-footer background-nav-blue">
-                          <a data-navigate="startview3"><button  name="button">Next &#8594;</button></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-
-
-               </div>
-               <div class="col-md-2 line-across">
-
-               </div>
-               <div class="col-md-4">
-                 <a data-navigate="startview3" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
-               </div>
-             </div>
-         </div>
+      </div>
+  </div>
+  <div class="modal fade" id="modalAnswer4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body pat2">
+      <h2>Incorrect:  You did not select the most appropriate adjuvant treatment option based on Michele’s test results.  Please review your Lab Handbook and select another treatment option.</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
+      </div>
+    </div>
+  </div>
+</div>
 
     </main>
   </div>
