--- a/src/javascript/templates/patient3/patient3view15.hbs
+++ b/src/javascript/templates/patient3/patient3view15.hbs
@@ -41,57 +41,19 @@
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
 Use the notes from your Lab Handbook to recommend a personalized treatment plan for Brittany Featherston.    </blockquote>
-    <main id="content-main" class="row patient-3">
+    <main id="content-main" class="row patient-3 svg-test">
 
-      <p>Select one of the following options and review your patient’s progress:
+      <p class="background-gray3">Select one of the following options and review your patient’s progress:</p>
 
-
-</p>
-<strong>TO-DO MULTIPLE CHOICE</strong>
-<p>
-
-
-Select one of the following options and review your patient’s progress:<br><br>Hormone blocking therapy only<br>Chemotherapy followed by hormone blocking therapy<br>HER2-targeted therapy and chemotherapy<br>Hormone blocking therapy, HER2-targeted therapy, and chemotherapy</p>
+<h2>A: Hormone blocking therapy only</h2><div class="row reg-pad">    <div class="col-md-12 no-pad text-center choice background-nav-blue">        <a class="continue answer-1"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer1" >Administor Treatment A</button></a>
+      </div></div><!-- Modal --><div class="modal fade" id="modalAnswer1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">  <div class="modal-dialog" role="document">    <div class="modal-content">      <div class="modal-body pat3">      <h2>Incorrect:  You did not select the most appropriate adjuvant treatment option based on Brittany’s test results.<br><br>          Please review your Lab Handbook and select another treatment option.</h2>      </div>      <div class="modal-footer background-nav-blue">         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>      </div>    </div>  </div></div>  <h2>B: Chemotherapy followed by hormone blocking therapy</h2><div class="row reg-pad">    <div class="col-md-12 no-pad text-center choice background-nav-blue">        <a class="continue answer-2"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer2" >Administor Treatment B</button></a>      </div>  </div>  <div class="modal fade" id="modalAnswer2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">  <div class="modal-dialog" role="document">    <div class="modal-content">      <div class="modal-body pat3">      <h2>Correct: Based on Brittany’s test results, the recommended treatment is hormone therapy and chemotherapy.        As a result of hormone therapy and chemotherapy, Brittany has not had a recurrence of her breast cancer.  Success!</h2>      </div>      <div class="modal-footer background-nav-blue">         <a data-navigate="endview" class="continue-2"><button data-dismiss="modal" name="button">Continue</button></a>      </div>    </div>  </div></div>  <h2>C: HHER2-targeted therapy and chemotherapy</h2><div class="row reg-pad">    <div class="col-md-12 no-pad text-center choice background-nav-blue">        <a class="continue answer-3"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer3" >Administor Treatment C</button></a>      </div>  </div>  <div class="modal fade" id="modalAnswer3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">  <div class="modal-dialog" role="document">    <div class="modal-content">      <div class="modal-body pat3">      <h2>Incorrect:  You did not select the most appropriate adjuvant treatment option based on Brittany’s test results.<br><br>          Please review your Lab Handbook and select another treatment option.</h2>      </div>      <div class="modal-footer background-nav-blue">         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>      </div>    </div>  </div></div>  <h2>D: Hormone blocking therapy, HER2-targeted therapy, and chemotherapy</h2><div class="row reg-pad m-bot">    <div class="col-md-12 no-pad text-center choice background-nav-blue">        <a class="continue answer-4"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer4" >Administor Treatment D</button></a>      </div>  </div>  <div class="modal fade" id="modalAnswer4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">  <div class="modal-dialog" role="document">    <div class="modal-content">      <div class="modal-body pat3">      <h2>Incorrect:  You did not select the most appropriate adjuvant treatment option based on Brittany’s test results.<br><br>          Please review your Lab Handbook and select another treatment option.</h2>      </div>      <div class="modal-footer background-nav-blue">         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>      </div>    </div>  </div></div>
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
 
 
 
          </figure> -->
-         <div class="row continue-container background-nav-blue">
-             <div class="col-md-12 no-pad text-center">
-               <div class="col-md-6">
 
-
-                 <!-- Button trigger modal -->
-                 <a data-navigate="patient3view14" class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
-
-
-
-                 <!-- Modal -->
-                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                   <div class="modal-dialog" role="document">
-                     <div class="modal-content">
-                       <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
-                       </div>
-                       <div class="modal-footer background-nav-blue">
-                          <a data-navigate="endview"><button  name="button">Next &#8594;</button></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-
-
-               </div>
-               <div class="col-md-2 line-across">
-
-               </div>
-               <div class="col-md-4">
-                 <a data-navigate="endview" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
-               </div>
-             </div>
-         </div>
 
     </main>
   </div>
