--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -41,7 +41,7 @@
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
   Here is Brittany’s mammogram.    </blockquote>
-    <main id="content-main" class="row patient-3 top-gray">
+    <main id="content-main" class="row patient-3 top-gray svg-test">
 
       <div class="header-gray">
         <div class="col-md-3">
