--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -9,7 +9,7 @@
 
       <nav class="side-nav background-green">
         <img class="patient3" src="images/patient2-final.jpg">
-        <ul>
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.03</span></li>
           <li>Brittany Featherston</li>
         </ul>
