--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -4,7 +4,7 @@
     <div id="side-navs-fixed">
       <nav class="side-nav background-green">
         <img class="patient3" src="images/patient2-final.jpg">
-        <ul>
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.03</span></li>
           <li>Brittany Featherston</li>
         </ul>
