--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -16,7 +16,7 @@
     <div id="side-navs-fixed">
       <nav class="side-nav background-green">
         <img class="patient3" src="images/patient2-final.jpg">
-        <ul>
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.03</span></li>
           <li>Brittany Featherston</li>
         </ul>
@@ -51,17 +51,17 @@
     </div>
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
+    <blockquote>
+      Here is Brittany's mammogram.
+    </blockquote>
+    <main id="content-main" class="row patient-3 svg-test">
 
-    <main id="content-main" class="row patient-3">
-      <blockquote>
-        Here is Brittany's mammogram.
-      </blockquote>
       <p>
 Review Brittany’s mammogram and click on an area that shows abnormalities.
 
       </p>
       <div class="svg-container">
-        <div class="svg-text">Which object is closest in size?</div>
+        <div class="svg-text"><h2>Which object is closest in size?</h2></div>
       <svg preserveAspectRatio="xMinYMin meet" class="svg-content" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="100%" height="100%" viewBox="0 0 432 451.2" enable-background="new 0 0 432 451.2" xml:space="preserve">
          <image width="432" height="451.2" xlink:href="images/Mammogram_Left_Abnormal_Patient3-Brittany.jpg">
