added enable javascript modal popup on intro page

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -200,7 +200,7 @@ height: 18px;
 .svg-test {
   padding:0!important;
   p {
-    padding:60px!important;
+    padding:15px!important;
   }
   .specs {
     margin: 0!important;
@@ -294,8 +294,9 @@ top: 13px;
   font-weight: bold;
   position: absolute;
   color: white;
-  padding: 2em;
+  padding: 25px;
   width: 100%;
+  padding-right:25px;
 top: 0px;
   margin: .3em;
   line-height: 34px;
@@ -495,7 +496,7 @@ top: 0px;
     margin-top: 112px;
     position: relative;
     top: 17px;
-    left: 14px;
+    left: 10px;
     color: white;
     cursor:pointer;
 
@@ -1429,16 +1430,16 @@ text-transform:none;
   }
 }
 .top-1 {
-      top: 76px!important;
+      top: 33px!important;
 }
 .top-2 {
-      top: 108px!important;
+      top: 53px!important;
 }
 .top-3 {
-      top: 94px!important;
+      top: 51px!important;
 }
 .top-4 {
-      top: 84px!important;
+      top: 41px!important;
 }
 button {
   text-transform: uppercase;
